Handle exam dependant and exam independant files differently

--- a/themes/default/templates/stylesheets.html
+++ b/themes/default/templates/stylesheets.html
@@ -1,3 +1,8 @@
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" href="styles.css" />
-<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="numbas_styles.css" />
+<link rel="stylesheet" type="text/css" href="exam_styles.css" />
+<link
+  href="//fonts.googleapis.com/css?family=Source+Sans+Pro"
+  rel="stylesheet"
+  type="text/css"
+/>
